--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,7 @@
 NODE_ENV=development
 PORT=5700
+
+DB_HOST = sql472.main-hosting.eu
+DB_USER = u669410571_qa_admin
+DB_PASSWORD = UFVcomp351
+DB_NAME = u669410571_qa_db
