--- a/config/config.env
+++ b/config/config.env
@@ -8,3 +8,6 @@ DB_NAME = u669410571_qa_db
 
 FILE_UPLOAD_PATH = ./public/uploads
 MAX_FILE_UPLOAD = 10000000
+
+JWT_SECRET = comp351projectisfun
+JWT_EXPIRE = 15d
