--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "i": "^0.3.6",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "npm": "^7.8.0"
