Check token expiration when resetting password

--- a/config/config.env
+++ b/config/config.env
@@ -18,4 +18,4 @@ SMTP_PORT = 465
 SMTP_EMAIL = no-reply@datacomputation.com
 SMTP_PASSWORD = P@ssw0rd
 FROM_EMAIL = no-reply@datacomputation.com
-FROM_NAME = no-reply
+FROM_NAME = Smalltalks System
