--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
-    "npm": "^7.8.0"
+    "npm": "^7.8.0",
+    "slugify": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
