--- a/config/config.env
+++ b/config/config.env
@@ -5,6 +5,7 @@ DB_HOST = sql472.main-hosting.eu
 DB_USER = u669410571_qa_admin
 DB_PASSWORD = UFVcomp351
 DB_NAME = u669410571_qa_db
+DB_POOL = 50
 
 FILE_UPLOAD_PATH = ./public/uploads
 MAX_FILE_UPLOAD = 10000000
