Changed Email Service Provider

--- a/config/config.env
+++ b/config/config.env
@@ -14,9 +14,9 @@ JWT_SECRET = comp351projectisfun
 JWT_EXPIRE = 15d
 JWT_COOKIE_EXPIRE = 15
 
-SMTP_HOST = smtp.hostinger.com
+SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
-SMTP_EMAIL = no-reply@datacomputation.com
-SMTP_PASSWORD = P@ssw0rd
-FROM_EMAIL = no-reply@datacomputation.com
+SMTP_EMAIL = noreply.smalltalks@gmail.com
+SMTP_PASSWORD = bglhuobjubibyojw
+FROM_EMAIL = noreply.smalltalks@gmail.com
 FROM_NAME = Smalltalks System
