--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
+    "helmet": "^4.5.0",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
